# Config

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
src/config/: functions.py  sources.py
tests/: conftest.py  test_functions.py  test_sources.py
